--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-    
+    <meta charset="utf-8">
     <head>
         <title>Estudio fotografico fototype 2000</title>
     </head>
 <body>
-    <h1>Bienbenido a la web del estudio fotografico 2000</h1>
+    <h1>Bienvenido a la web del estudio fotografico 2000</h1>
     <h1>Esta es la pagina donde podras ver nuestros trabajos</h1>
 </body>
 
