--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Bienvenido a la web del estudio fotografico 2000</h1>
     <h1>Esta es la pagina donde podras ver nuestros trabajos</h1>
+    <p>Este es un parrafo<p>
 </body>
 
 </html>
