es el parrafo 2
parrafo 2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Bienvenido a la web del estudio fotografico 2000</h1>
     <h1>Esta es la pagina donde podras ver nuestros trabajos</h1>
     <p>Este es un parrafo<p>
-</body>
+    <p>parrafo 2<p>
 
 </html>
