--- a/github.html
+++ b/github.html
@@ -11,7 +11,7 @@
     <p>añadir los cambio al archivo(git add nombre_del_archivo)</p>
     <p>regresar antes de la modificacion del archivo (git reset head nombre_del archivo)</p>
     <p>borrar archivos (git rm nombre_del_archivo)</p>
-    <p>añadir archivos a git (git commit)(i)
+    <p>añadir archivos a git (git commit)(i)<P>
 </body>
 
         
