--- a/github.html
+++ b/github.html
@@ -15,9 +15,9 @@
     <p>borrar archivos (git rm nombre_del_archivo)</p>
     <p>añadir archivos a git (git commit)(i)<P>
     <p>añadir archivos a git mas rapido(git commit -m"comentario")<P>
-    <p>desaser el commit (git reset --soft HEAD~1)</p>
+    <p>deshacer el commit (git reset --soft HEAD~1)</p>
     <p>ver repositorios o url(git remote)(git remote -v)</p>
-    <p></p>
+    <p>subir cambios ala pagina (git push origin master)</p>
     </ul>
     
 </body>
