--- a/github.html
+++ b/github.html
@@ -18,6 +18,18 @@
     <p>deshacer el commit (git reset --soft HEAD~1)</p>
     <p>ver repositorios o url(git remote)(git remote -v)</p>
     <p>subir cambios ala pagina (git push origin master)</p>
+    <p>Descargar cambios o actualizaciones(git pull origin master)</p>
+    <p>ver que cambio (git log)</p>
+    <p>ver que ramas tiene (git branch)</p>
+    <p>crear ramas (git branch nombre_de_rama)</p>
+    <p>cambiar de rama (git checkout nombre_de_rama)</p>
+    <p>crear rama y ir a ella (git checkout -b nombre_de_rama)</p>
+    <p>mostar todo de todas las ramas(git log --graph --decorate --oneline --all)</p>
+    <p>mandar cabios a master (git merge nombre_de_rama)</p>
+    <p>ver modificacion de linea (git diff num comit num comit)</p>
+    <p>eliminar ramas (git branch -d nombre_de_rama) (git branch -D nombre_de_rama)</p>
+    <p>borrar el bote de basura de git (git gc)</p>
+    <p>cambio de un commit (git commit --amend)</p>
     </ul>
     
 </body>
